# archaeology_rust_api

./: .gitignore  Cargo.toml  README.md  SECURITY.md  archaeology_rust_api.postman_collection.json  cspell.json  sonar-scanner.properties
.github/workflows/: build.yml  mega-linter.yml  rust.yml  rustfmt.yml  rustsec.yml  sonarcloud.yml
src/: main.rs  models.rs  services.rs
src/configs/: mod.rs
src/models/: area_model.rs  associations.rs  locus_model.rs  site_model.rs  square_model.rs  supervisor_model.rs  team_model.rs
src/models/associations/: asc_area_team_model.rs
src/services/: area_service.rs  locus_service.rs  mod.rs  site_service.rs  square_service.rs  supervisor_service.rs  team_service.rs
src/services/site_service/: mod.rs
src/services/test_service/: mod.rs
templates/: newObject.sh
templates/object/: new_model.rs  new_service.rs
